# docs/swagger.json
@@ -58,13 +58,9 @@
                 "summary": "好友信息",
                 "parameters": [
                     {
-                        "description": "好友信息",
-                        "name": "friend",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/service.AddFriendRequest"
-                        }
+                        "type": "integer",
+                        "name": "friendId",
+                        "in": "query"
                     },
                     {
                         "type": "string",
@@ -97,15 +93,6 @@
                 ],
                 "summary": "好友列表",
                 "parameters": [
-                    {
-                        "description": "好友列表",
-                        "name": "friend",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/service.GetFriendListRequest"
-                        }
-                    },
                     {
                         "type": "string",
                         "description": "token",
@@ -189,6 +176,37 @@
                     }
                 }
             }
+        },
+        "/user/register/code": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户"
+                ],
+                "summary": "用户注册获取验证码",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "邮箱",
+                        "name": "email",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/service.GetCodeReply"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -203,6 +221,9 @@
                 }
             }
         },
+        "service.GetCodeReply": {
+            "type": "object"
+        },
         "service.GetFriendListReply": {
             "type": "object",
             "properties": {
@@ -213,9 +234,6 @@
                     }
                 }
             }
-        },
-        "service.GetFriendListRequest": {
-            "type": "object"
         },
         "service.GetFriendListSimple": {
             "type": "object",
@@ -240,16 +258,16 @@
         "service.LoginRequest": {
             "type": "object",
             "required": [
-                "password",
-                "userName"
+                "email",
+                "password"
             ],
             "properties": {
-                "password": {
-                    "description": "密码",
+                "email": {
+                    "description": "邮箱",
                     "type": "string"
                 },
-                "userName": {
-                    "description": "用户名",
+                "password": {
+                    "description": "密码",
                     "type": "string"
                 }
             }
@@ -266,10 +284,20 @@
         "service.RegisterRequest": {
             "type": "object",
             "required": [
+                "code",
+                "email",
                 "password",
                 "userName"
             ],
             "properties": {
+                "code": {
+                    "description": "验证码",
+                    "type": "string"
+                },
+                "email": {
+                    "description": "邮箱",
+                    "type": "string"
+                },
                 "password": {
                     "description": "密码",
                     "type": "string"
