# service/friend.go
@@ -29,7 +29,7 @@ func AddFriend(c *gin.Context) {
 	req := &AddFriendRequest{}
 	if err := c.ShouldBindJSON(req); err != nil {
 		zap.S().Errorf("[BindJSON ERROR] : %v", err)
-		util.FailResp(c, err.Error())
+		util.FailRespWithCode(c, util.ShouldBindJSONError)
 		return
 	}
 
@@ -47,7 +47,8 @@ func AddFriend(c *gin.Context) {
 			util.FailResp(c, "该用户不存在")
 			return
 		}
-		util.FailResp(c, "查询失败")
+		zap.S().Errorf("repo.GetUserByUserId : %v", err)
+		util.FailRespWithCode(c, util.CURDSelectError)
 		return
 	}
 
@@ -61,19 +62,20 @@ func AddFriend(c *gin.Context) {
 	err = repo.AddFriendCreate(userId, req.FriendId)
 	if err != nil {
 		zap.S().Errorf("repo.AddFriendCreate : %v", err)
-		util.FailResp(c, "插入失败")
+		util.FailRespWithCode(c, util.CURDInsertError)
 		return
 	}
 	util.SuccessResp(c, &AddFriendReply{})
 }
 
 type GetFriendRequest struct {
-	FriendId int64 `json:"friendId"`
+	FriendId int64 `json:"friendId" form:"friendId" binding:"required"`
 }
 
 type GetFriendReply struct {
 	UserName string `json:"username"`
 	Mobile   string `json:"mobile"`
+	Email    string `json:"email"`
 }
 
 // GetFriend
@@ -81,32 +83,31 @@ type GetFriendReply struct {
 // @Summary 好友信息
 // @accept json
 // @Produce  json
-// @Param friend body AddFriendRequest true "好友信息"
+// @Param friend query AddFriendRequest true "好友信息"
 // @Param token header string true "token"
 // @Success 200 {object} AddFriendReply
 // @Router /get/friend [get]
 func GetFriend(c *gin.Context) {
 	req := &GetFriendRequest{}
-	if err := c.ShouldBindJSON(req); err != nil {
+	if err := c.ShouldBindQuery(req); err != nil {
 		zap.S().Errorf("[BindQuery ERROR] : %v", err)
-		util.FailResp(c, err.Error())
+		util.FailRespWithCode(c, util.ShouldBindJSONError)
 		return
 	}
+	// todo 判断是不是他的好友
 
 	user, err := repo.GetUserByUserId(req.FriendId)
 	if err != nil {
 		zap.S().Errorf("repo.GetUserByUserId : %v", err)
-		util.FailResp(c, "查询失败")
+		util.FailRespWithCode(c, util.CURDSelectError)
 		return
 	}
 
 	util.SuccessResp(c, &GetFriendReply{
 		UserName: user.UserName,
 		Mobile:   user.Mobile,
+		Email:    user.Email,
 	})
-}
-
-type GetFriendListRequest struct {
 }
 
 type GetFriendListReply struct {
@@ -122,8 +123,7 @@ type GetFriendListSimple struct {
 // @Tags 好友
 // @Summary 好友列表
 // @accept json
-// @Produce  json
-// @Param friend body GetFriendListRequest true "好友列表"
+// @Produce json
 // @Param token header string true "token"
 // @Success 200 {object} GetFriendListReply
 // @Router /get/friend/list [get]
@@ -132,23 +132,24 @@ func GetFriendList(c *gin.Context) {
 	idList, err := repo.GetFriendList(userId)
 	if err != nil {
 		zap.S().Errorf("repo.GetFriendList : %v", err)
-		util.FailResp(c, "查询失败")
-		return
-	}
-
-	userList, err := repo.GetUserByUserIds(idList)
-	if err != nil {
-		zap.S().Errorf("repo.GetUserByUserIds : %v", err)
-		util.FailResp(c, "查询失败")
+		util.FailRespWithCode(c, util.CURDSelectError)
 		return
 	}
 
 	data := &GetFriendListReply{}
-	for _, user := range userList {
-		data.List = append(data.List, &GetFriendListSimple{
-			Id: user.Id,
-		})
-
+	zap.S().Debugf("idList : %v", idList)
+	if len(idList) != 0 {
+		userList, err := repo.GetUserByUserIds(idList)
+		if err != nil {
+			zap.S().Errorf("repo.GetUserByUserIds : %v", err)
+			util.FailRespWithCode(c, util.CURDSelectError)
+			return
+		}
+		for _, user := range userList {
+			data.List = append(data.List, &GetFriendListSimple{
+				Id: user.Id,
+			})
+		}
 	}
 
 	util.SuccessResp(c, data)
